[package]
name = "stately-streams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
either = "1.8.0"
frunk = "0.4.1"
futures = "0.3.25"
futures-timer = "3.0.2"
pin-project = "1.0.12"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
