[package]
name = "stately-streams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
either = "1.8.0"
frunk = "0.4.1"
futures = "0.3.25"
futures-timer = "3.0.2"
pin-project = "1.0.12"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
reqwest = { version = "0.11.13", features = ["rustls", "rustls-tls", "json"] }
tower-http = "0.3.5"
hyper = "0.14.23"
rayon = "1.6.1"

[dev-dependencies]
sqlx = {version="0.6", features = ["runtime-tokio-rustls", "postgres", "time"]}
anyhow = "1.0"
reqwest = { version = "0.11.13", features = ["rustls", "rustls-tls", "json"] }
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"] }
time = { version = "0.3.17", features = ["serde"] }
serde_json = "1.0.91"
rand = "0.8.5"
rand_distr = "0.4.3"
